Refinement, PR fix requests
Added the already existing Cancel label.
Improved the alignment of footer objects and wrapped buttons for smaller layouts.
Added props for Cancel button (cancelProps) so it can be edited to match the style of the other buttons
Added gap to footer buttons. Removed unnecessary uses of cx. Replaced right and left changes with translate3d
Long titles are now truncated with an ending ellipses.

--- a/src/app/components/cds/slideout/Slideout.module.css
+++ b/src/app/components/cds/slideout/Slideout.module.css
@@ -10,85 +10,78 @@
 
 .slideoutContainer {
   background-color: var(--otherWhite);
-  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+  max-height: 100%;
   position: relative;
 }
 
 .slideoutTitle {
   background-color: var(--brandLight);
-  height: 80px;
 
   .slideoutTitleContent {
     align-items: center;
     display: flex;
     flex-wrap: nowrap;
-    height: 100%;
+    gap: 8px;
     justify-content: space-between;
+    min-height: 80px;
     padding: 10px;
 
     h6 {
       margin: 0;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
     }
   }
 }
 
 .slideoutBody {
-  bottom: 1px;
   overflow: scroll;
   padding: 10px;
-  position: fixed;
-  top: 80px;
-
-  &.withFooter {
-    bottom: 90px;
-  }
 }
 
 .slideoutFooter {
   background-color: var(--brandBackgroundAccent);
-  bottom: 0;
-  height: 90px;
-  position: absolute;
   width: 100%;
 
   .slideoutFooterMain {
     align-items: center;
     display: flex;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     height: 100%;
     justify-content: space-between;
+    min-height: 90px;
     padding: 8px;
   }
 
-  .slideoutFooterLeftContent {
-    align-items: flex-start;
+  .slideoutFooterContent {
     display: flex;
-  }
-
-  .slideoutFooterRightContent {
-    align-items: flex-end;
-    display: flex;
+    gap: 8px;
   }
 }
 
 body[dir='rtl'] {
   .slideoutMain {
-    left: -600px;
-    transition: left 380ms ease;
+    left: 0;
+    transform: translate3d(-600px, 0, 0);
+    transition: all 380ms ease;
 
     &.slide {
-      left: 0;
+      transform: translate3d(0, 0, 0);
     }
   }
 }
 
 body[dir='ltr'] {
   .slideoutMain {
-    right: -600px;
-    transition: right 380ms ease;
+    right: 0;
+    transform: translate3d(600px, 0, 0);
+    transition: all 380ms ease;
 
     &.slide {
-      right: 0;
+      transform: translate3d(0, 0, 0);
     }
   }
 }
